z-index fixed

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: var(--ff);
+    z-index: 1;
 }
 
 html {
@@ -71,6 +72,7 @@ menu {
     left: 0;
     transition: var(--transition);
     display: none;
+    z-index: 3;
 }
 
 .menu-contents {
@@ -144,6 +146,7 @@ menu button {
     width: 10vw;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 
 .prev-btn {
